3D MRT Matrizen sind drin

--- a/appendix.tex
+++ b/appendix.tex
@@ -56,3 +56,93 @@ Die partiellen Ableitungen von $u$ können jeweils durch einen mittleren Differe
 \end{equation}
 
 Wird außerdem statt dem MRT-Schema ein BGK-Schema verwendet wird, ist $\mu' =  \mu$.
+
+\section{MRT in 3D}
+Analog zum 2D-Fall wird die Transformationsmatrix aus den Momenten der Geschwindigkeitsverteilung gebildet.
+Mit den Geschwindigkeiten:
+\begin{equation}
+\left(\begin{smallmatrix} 
+c_x \\
+c_y \\
+c_z
+\end{smallmatrix} \right) = 
+\left(\begin{smallmatrix} 
+0 & 1 & 1 & 0 & -1 & -1 & -1 &  0 &  1 & 0 & 1 & 0 & -1 &  0 & 0  &  1 &  0 & -1 & 0 \\
+0 & 0 & 1 & 1 &  1 &  0 & -1 & -1 & -1 & 0 & 0 & 1 &  0 & -1 & 0  &  0 &  1 &  0 & -1 \\
+0 & 0 & 0 & 0 &  0 &  0 &  0 &  0 &  0 & 1 & 1 & 1 &  1 &  1 & -1 & -1 & -1 & -1 & -1
+\end{smallmatrix} \right) ,
+\end{equation}
+ergeben sich so die folgenden Momente:
+\begin{itemize}
+ \item $ \langle m_1 | =  \langle ||c_i||^0 | = (1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1)$ 
+ \item $ \langle m_2 | =  \langle ||c_i||^2 | = (0,1,2,1,2,1,2,1,2,1,2,2,2,2,1,2,2,2,2)$
+ \item $ \langle m_3 | =  \langle ||c_i||^4 | = (0,1,4,1,4,1,4,1,4,1,4,4,4,4,1,4,4,4,4)$
+ \item $ \langle m_4 | =  \langle c_{i,x} | = (0,1,1,0,-1,-1,-1,0,1,0,1,0,-1,0,0,1,0,-1,0)$
+ \item $ \langle m_5 | =  \langle c_{i,x} ||c_i||^2 | = (0,1,2,0,-2,-1,-2,0,2,0,2,0,-2,0,0,2,0,-2,0)$
+ \item $ \langle m_6 | =  \langle c_{i,y} | = (0,0,1,1,1,0,-1,-1,-1,0,0,1,0,-1,0,0,1,0,-1)$
+ \item $ \langle m_7 | =  \langle c_{i,y} ||c_i||^2 | = (0,0,2,1,2,0,-2,-1,-2,0,0,2,0,-2,0,0,2,0,-2)$
+ \item $ \langle m_8 | =  \langle c_{i,z} | = (0,0,0,0,0,0,0,0,0,1,1,1,1,1,-1,-1,-1,-1,-1)$
+ \item $ \langle m_9 | =  \langle c_{i,z} ||c_i||^2 | = (0,0,0,0,0,0,0,0,0,1,2,2,2,2,-1,-2,-2,-2,-2)$
+ \item $ \langle m_{10} | =  \langle c^2_{i,x} - ||c_i||^2 | =$ (0, 0, -1, -1, -1, 0, -1, -1, -1, -1, -1, -2, -1, -2, -1, -1, -2, -1, -2)
+ \item $ \langle m_{11} | =  \langle ||c_i||^2 \cdot (c^2_{i,x} - ||c_i||^2) | = (0,0,-2,-1,-2,0,-2,-1,-2,-1,-2,-4,-2,-4,-1,-2,-4,-2,-4)$
+ \item $ \langle m_{12} | =  \langle c^2_{i,y} - c^2_{i,z} | = (0,0,1,1,1,0,1,1,1,-1,-1,0,-1,0,-1,-1,0,-1,0)$
+ \item $ \langle m_{13} | =  \langle ||c_i||^2 \cdot (c^2_{i,y} - c^2_{i,z}) | = (0,0,2,1,2,0,2,1,2,-1,-2,0,-2,0,-1,-2,0,-2,0)$
+ \item $ \langle m_{14} | =  \langle c_{i,x} c_{i,y}  | = (0,0,1,0,-1,0,1,0,-1,0,0,0,0,0,0,0,0,0,0)$
+ \item $ \langle m_{15} | =  \langle c_{i,y} c_{i,z}  | = (0,0,0,0,0,0,0,0,0,0,0,1,0,-1,0,0,-1,0,1)$
+ \item $ \langle m_{16} | =  \langle c_{i,x} c_{i,z}  | = (0,0,0,0,0,0,0,0,0,0,1,0,-1,0,0,-1,0,1,0)$
+ \item $ \langle m_{17} | =  \langle (c^2_{i,y} - c^2_{i,z}) c_{i,x}   | = (0,0,1,0,-1,0,-1,0,1,0,-1,0,1,0,0,-1,0,1,0)$
+ \item $ \langle m_{18} | =  \langle (c^2_{i,z} - c^2_{i,x}) c_{i,y}   | = (0,0,-1,0,-1,0,1,0,1,0,0,1,0,-1,0,0,1,0,-1)$
+ \item $ \langle m_{19} | =  \langle (c^2_{i,x} - c^2_{i,y}) c_{i,z}   | = (0,0,0,0,0,0,0,0,0,0,1,-1,1,-1,0,-1,1,-1,1)$
+\end{itemize}
+Nach  der Orthogonalisierung ergibt sich somit folgende Transformationsmatrix:
+\begin{equation}
+ M = \left( \begin{smallmatrix}
+ 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+ -30 & -11 & 8 & -11 & 8 & -11 & 8 & -11 & 8 & -11 & 8 & 8 & 8 & 8 & -11 & 8 & 8 & 8 & 8 \\
+ 12 & -4 & 1 & -4 & 1 & -4 & 1 & -4 & 1 & -4 & 1 & 1 & 1 & 1 & -4 & 1 & 1 & 1 & 1 \\
+ 0 & 1 & 1 & 0 & -1 & -1 & -1 & 0 & 1 & 0 & 1 & 0 & -1 & 0 & 0 & 1 & 0 & -1 & 0 \\
+ 0 & -4 & 1 & 0 & -1 & 4 & -1 & 0 & 1 & 0 & 1 & 0 & -1 & 0 & 0 & 1 & 0 & -1 & 0 \\
+ 0 & 0 & 1 & 1 & 1 & 0 & -1 & -1 & -1 & 0 & 0 & 1 & 0 & -1 & 0 & 0 & 1 & 0 & -1 \\
+ 0 & 0 & 1 & -4 & 1 & 0 & -1 & 4 & -1 & 0 & 0 & 1 & 0 & -1 & 0 & 0 & 1 & 0 & -1 \\
+ 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & -1 & -1 & -1 & -1 & -1 \\
+ 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & -4 & 1 & 1 & 1 & 1 & 4 & -1 & -1 & -1 & -1 \\
+ 0 & 2 & 1 & -1 & 1 & 2 & 1 & -1 & 1 & -1 & 1 & -2 & 1 & -2 & -1 & 1 & -2 & 1 & -2 \\
+ 0 & -4 & 1 & 2 & 1 & -4 & 1 & 2 & 1 & 2 & 1 & -2 & 1 & -2 & 2 & 1 & -2 & 1 & -2 \\
+ 0 & 0 & 1 & 1 & 1 & 0 & 1 & 1 & 1 & -1 & -1 & 0 & -1 & 0 & -1 & -1 & 0 & -1 & 0 \\
+ 0 & 0 & 1 & -2 & 1 & 0 & 1 & -2 & 1 & 2 & -1 & 0 & -1 & 0 & 2 & -1 & 0 & -1 & 0 \\
+ 0 & 0 & 1 & 0 & -1 & 0 & 1 & 0 & -1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+ 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & -1 & 0 & 0 & -1 & 0 & 1 \\
+ 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & -1 & 0 & 0 & -1 & 0 & 1 & 0 \\
+ 0 & 0 & 1 & 0 & -1 & 0 & -1 & 0 & 1 & 0 & -1 & 0 & 1 & 0 & 0 & -1 & 0 & 1 & 0 \\
+ 0 & 0 & -1 & 0 & -1 & 0 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & -1 & 0 & 0 & 1 & 0 & -1 \\
+ 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & -1 & 1 & -1 & 0 & -1 & 1 & -1 & 1
+\end{smallmatrix} \right).
+\end{equation}
+Die entsprechende inverse Transformationsmatrix ist:\\
+\rotatebox{90}{
+$
+%\begin{equation}
+ M = \frac{1}{47880} \left( \begin{smallmatrix}
+2520 & -600 & 2280 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & -0 & 0 & 0 & 0 & -0 \\
+2520 & -220 & -760 & 4788 & -4788 & 0 & 0 & 0 & 0 & 2660 & -2660 & 0 & 0 & 0 & -0 & 0 & 0 & 0 & -0 \\
+2520 & 160 & 190 & 4788 & 1197 & 4788 & 1197 & 0 & 0 & 1330 & 665 & 3990 & 1995 & 11970 & -0 & 0 & 5985 & -5985 & -0 \\
+2520 & -220 & -760 & 0 & 0 & 4788 & -4788 & 0 & 0 & -1330 & 1330 & 3990 & -3990 & 0 & -0 & 0 & 0 & 0 & -0 \\
+2520 & 160 & 190 & -4788 & -1197 & 4788 & 1197 & 0 & 0 & 1330 & 665 & 3990 & 1995 & -11970 & -0 & 0 & -5985 & -5985 & -0 \\
+2520 & -220 & -760 & -4788 & 4788 & 0 & 0 & 0 & 0 & 2660 & -2660 & 0 & 0 & 0 & -0 & 0 & 0 & 0 & -0 \\
+2520 & 160 & 190 & -4788 & -1197 & -4788 & -1197 & 0 & 0 & 1330 & 665 & 3990 & 1995 & 11970 & -0 & 0 & -5985 & 5985 & -0 \\
+2520 & -220 & -760 & 0 & 0 & -4788 & 4788 & 0 & 0 & -1330 & 1330 & 3990 & -3990 & 0 & -0 & 0 & 0 & 0 & -0 \\
+2520 & 160 & 190 & 4788 & 1197 & -4788 & -1197 & 0 & 0 & 1330 & 665 & 3990 & 1995 & -11970 & -0 & 0 & 5985 & 5985 & -0 \\
+2520 & -220 & -760 & 0 & 0 & 0 & 0 & 4788 & -4788 & -1330 & 1330 & -3990 & 3990 & 0 & -0 & 0 & 0 & 0 & -0 \\
+2520 & 160 & 190 & 4788 & 1197 & 0 & 0 & 4788 & 1197 & 1330 & 665 & -3990 & -1995 & 0 & -0 & 11970 & -5985 & 0 & 5985 \\
+2520 & 160 & 190 & 0 & 0 & 4788 & 1197 & 4788 & 1197 & -2660 & -1330 & 0 & 0 & 0 & 11970 & 0 & 0 & 5985 & -5985 \\
+2520 & 160 & 190 & -4788 & -1197 & 0 & 0 & 4788 & 1197 & 1330 & 665 & -3990 & -1995 & 0 & -0 & -11970 & 5985 & 0 & 5985 \\
+2520 & 160 & 190 & 0 & 0 & -4788 & -1197 & 4788 & 1197 & -2660 & -1330 & 0 & 0 & 0 & -11970 & 0 & 0 & -5985 & -5985 \\
+2520 & -220 & -760 & 0 & 0 & 0 & 0 & -4788 & 4788 & -1330 & 1330 & -3990 & 3990 & 0 & -0 & 0 & 0 & 0 & -0 \\
+2520 & 160 & 190 & 4788 & 1197 & 0 & 0 & -4788 & -1197 & 1330 & 665 & -3990 & -1995 & 0 & -0 & -11970 & -5985 & 0 & -5985 \\
+2520 & 160 & 190 & 0 & 0 & 4788 & 1197 & -4788 & -1197 & -2660 & -1330 & -0 & -0 & 0 & -11970 & 0 & 0 & 5985 & 5985 \\
+2520 & 160 & 190 & -4788 & -1197 & 0 & 0 & -4788 & -1197 & 1330 & 665 & -3990 & -1995 & 0 & -0 & 11970 & 5985 & 0 & -5985 \\
+2520 & 160 & 190 & 0 & 0 & -4788 & -1197 & -4788 & -1197 & -2660 & -1330 & -0 & -0 & 0 & 11970 & 0 & 0 & -5985 & 5985 
+\end{smallmatrix} \right).
+%\end{equation}
+$
+}
