--- a/appendix.tex
+++ b/appendix.tex
@@ -1,19 +1,4 @@
 \chapter{Anhang}
-% \section{Relaxationsmatrix}
-% \label{anhang:relaxationsmatrix}
-% \rotatebox{90}{
-% $ S = \left( \begin{smallmatrix}
-% \frac{4 s_3+4 s_2}{9} & -\frac{2 s_3-s_2}{9}                 & \frac{s_3-2 s_2}{9}                 & -\frac{2 s_3-s_2}{9}                 & \frac{s_3-2 s_2}{9}                 & -\frac{2 s_3-s_2}{9}                 & \frac{s_3-2 s_2}{9}                 & -\frac{2 s_3-s_2}{9}                 & \frac{s_3-2 s_2}{9} \\
-% -\frac{2 s_3-s_2}{9}  & \frac{9 \omega+12 s_5+4 s_3+s_2}{36} & -\frac{3 s_5+s_3+s_2}{18}           & -\frac{9 \omega-4 s_3-s_2}{36}       & \frac{3 s_5-s_3-s_2}{18}            & \frac{9 \omega-12 s_5+4 s_3+s2}{36}  & \frac{3 s_5-s_3-s_2}{18}            & -\frac{9 \omega-4 s_3-s_2}{36}       & -\frac{3 s_5+s_3+s_2}{18} \\
-% \frac{s_3-2 s_2}{9}   & -\frac{3 s_5+s_3+s_2}{18}            & \frac{9 \omega+6 s_5+s_3+4 s_2}{36} & -\frac{3 s_5+s_3+s_2}{18}            & -\frac{9 \omega-s_3-4 s_2}{36}      & \frac{3 s_5-s_3-s_2}{18}             & \frac{9 \omega-6 s_5+s_3+4 s_2}{36} & \frac{3 s_5-s_3-s_2}{18}             & -\frac{9 \omega-s_3-4 s_2}{36} \\
-% -\frac{2 s_3-s_2}{9}  & -\frac{9 \omega-4 s_3-s_2}{36}       & -\frac{3 s_5+s_3+s_2}{18}           & \frac{9 \omega+12 s_5+4 s_3+s_2}{36} & -\frac{3 s_5+s_3+s_2}{18}           & -\frac{9 \omega-4 s_3-s_2}{36}       & \frac{3 s_5-s_3-s_2}{18}            & \frac{9 \omega-12 s_5+4 s_3+s_2}{36} & \frac{3 s_5-s_3-s_2}{18} \\
-% \frac{s_3-2 s_2}{9}   & \frac{3 s_5-s_3-s_2}{18}             & -\frac{9 \omega-s_3-4 s_2}{36}      & -\frac{3 s_5+s_3+s_2}{18}            & \frac{9 \omega+6 s_5+s_3+4 s_2}{36} & -\frac{3 s_5+s_3+s_2}{18}            & -\frac{9 \omega-s_3-4 s_2}{36}      & \frac{3 s_5-s_3-s_2}{18}             & \frac{9 \omega-6 s_5+s_3+4 s_2}{36} \\
-% -\frac{2 s_3-s_2}{9}  & \frac{9 \omega-12 s_5+4 s_3+s_2}{36} & \frac{3 s_5-s_3-s_2}{18}            & -\frac{9 \omega -4 s_3-s_2}{36}      & -\frac{3 s_5+s_3+s_2}{18}           & \frac{9 \omega+12 s_5+4 s_3+s_2}{36} & -\frac{3 s_5+s_3+s_2}{18}           & -\frac{9 \omega-4 s_3-s_2}{36}       & \frac{3 s_5-s_3-s_2}{18} \\
-% \frac{s_3-2 s_2}{9}   & \frac{3 s_5-s_3-s_2}{18}             & \frac{9 \omega-6 s_5+s_3+4 s_2}{36} & \frac{3 s_5-s_3-s_2}{18}             & -\frac{9 \omega-s_3-4 s_2}{36}      & -\frac{3 s_5+s_3+s_2}{18}            & \frac{9 \omega+6 s_5+s_3+4 s_2}{36} & -\frac{3 s_5+s_3+s_2}{18}            & -\frac{9 \omega-s_3-4 s_2}{36} \\
-% -\frac{2 s_3-s_2}{9}  & -\frac{9 \omega-4 s_3-s_2}{36}       & \frac{3 s_5-s_3-s_2}{18}            & \frac{9 \omega-12 s_5+4 s_3+s_2}{36} & \frac{3 s_5-s_3-s_2}{18}            & -\frac{9 \omega-4 s_3-s_2}{36}       & -\frac{3 s_5+s_3+s_2}{18}           & \frac{9 \omega+12 s_5+4 s_3+s_2}{36} & -\frac{3 s_5+s_3+s_2}{18} \\
-% \frac{s_3-2 s_2}{9}   &  -\frac{3 s_5+s_3+s_2}{18}           & -\frac{9 \omega-s_3-4 s_2}{36}      & \frac{3 s_5-s_3-s_2}{18}             & \frac{9 \omega-6 s_5+s_3+4 s_2}{36} & \frac{3 s_5-s_3-s_2}{18}             & -\frac{9 \omega-s_3-4 s_2}{36}      & -\frac{3 s_5+s_3+s_2}{18}            & \frac{9 \omega+6 s_5+s_3+4 s_2}{36}
-% \end{smallmatrix} \right) $
-% }
 \section{Volumenviskosität}
 In der Relaxationsmatrix hängt der Parameter $s_2$ direkt von der Volumenviskosität (\emph{bulk viscosity}, \emph{second viscosity}) ab \cite{Guo2013}:
 \begin{equation}
@@ -121,7 +106,6 @@ Nach  der Orthogonalisierung ergibt sich somit folgende Transformationsmatrix:
 Die entsprechende inverse Transformationsmatrix ist:\\
 \rotatebox{90}{
 $
-%\begin{equation}
  M = \frac{1}{47880} \left( \begin{smallmatrix}
 2520 & -600 & 2280 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & -0 & 0 & 0 & 0 & -0 \\
 2520 & -220 & -760 & 4788 & -4788 & 0 & 0 & 0 & 0 & 2660 & -2660 & 0 & 0 & 0 & -0 & 0 & 0 & 0 & -0 \\
@@ -143,6 +127,31 @@ $
 2520 & 160 & 190 & -4788 & -1197 & 0 & 0 & -4788 & -1197 & 1330 & 665 & -3990 & -1995 & 0 & -0 & 11970 & 5985 & 0 & -5985 \\
 2520 & 160 & 190 & 0 & 0 & -4788 & -1197 & -4788 & -1197 & -2660 & -1330 & -0 & -0 & 0 & 11970 & 0 & 0 & -5985 & 5985 
 \end{smallmatrix} \right).
-%\end{equation}
 $
 }
+\\
+Die Relaxationsmatrix ergibt sich damit folgendermaßen:
+\begin{equation}
+ \hat{S} \equiv \text{diag} (s_1,s_2,s_3,s_4,s_5,s_6,s_7,s_8,s_9,s_{10},s_{11},s_{12},s_{13},s_{14},s_{15},s_{16},s_{17},s_{18},s_{19}) .
+\end{equation}
+Aus Symmetrie- und Erhaltungs-Gründen ergibt sich:
+\begin{align}
+s_1 &= 1 ,\\
+s_4 &= 1 ,\\
+s_6 &= 1 ,\\
+s_8 &= 1 ,\\
+s_5 &= s_7 = s_9 ,\\
+s_{10} &= s_{12} ,\\
+s_{11} &= s_{13} ,\\
+s_{14} &= s_{15} = s_{16} ,\\
+s_{17} &= s_{18} = s_{19} . 
+\end{align}
+Dabei entspricht $s_10$ analog zum 2D-Fall $\omega$. Weiterhin gilt $s_10 = s_{14}$ \cite{2002}. 
+Damit vereinfacht sich die Relaxationsmatrix zu:
+\begin{equation}
+\hat{S} \equiv \text{diag} (1,s_2,s_3,1,s_5,1,s_5,1,s_5, \omega ,s_{11},\omega,s_{11},\omega,\omega,\omega,s_{17},s_{17},s_{17}) .
+\end{equation}
+$s_2$ korrespondiert mit der Bulk-Viskosität:
+\begin{equation}
+\nu' = \frac{2}{9} \left( \frac{1}{s_2} - \frac{1}{2} \right) .
+\end{equation}
