more adaptations for 3D

--- a/appendix.tex
+++ b/appendix.tex
@@ -126,7 +126,7 @@ $
 2520 & 160 & 190 & 0 & 0 & 4788 & 1197 & -4788 & -1197 & -2660 & -1330 & -0 & -0 & 0 & -11970 & 0 & 0 & 5985 & 5985 \\
 2520 & 160 & 190 & -4788 & -1197 & 0 & 0 & -4788 & -1197 & 1330 & 665 & -3990 & -1995 & 0 & -0 & 11970 & 5985 & 0 & -5985 \\
 2520 & 160 & 190 & 0 & 0 & -4788 & -1197 & -4788 & -1197 & -2660 & -1330 & -0 & -0 & 0 & 11970 & 0 & 0 & -5985 & 5985 
-\end{smallmatrix} \right).
+\end{smallmatrix} \right)
 $
 }
 \\
