--- a/Anmerkungen.tex
+++ b/Anmerkungen.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper,10pt]{scrreprt}
-\usepackage[utf8]{inputenc}
+%%\usepackage[utf8]{inputenc}
+\usepackage{inputenc}
 \usepackage{lmodern}
 \usepackage[T1]{fontenc}
 \usepackage[ngerman]{babel}
