--- a/Anmerkungen.tex
+++ b/Anmerkungen.tex
@@ -12,8 +12,8 @@
 %\newunit{\SIvolfrac}{\text{vol.-\%}}
 %\DeclareSIUnit{\SIvolfrac}{\text{vol.-\%}}
 
-\usepackage{subfig}
-
+%\usepackage{subfig}
+\usepackage{subcaption}
 %\usepackage{biblatex}
 \usepackage[backend=bibtex]{biblatex}
 %\usepackage[style=chem-acs,articletitle=true,biblabel=brackets,sorting=none]{biblatex}
