--- a/Anmerkungen.tex
+++ b/Anmerkungen.tex
@@ -1,9 +1,11 @@
 \documentclass[a4paper,10pt]{scrreprt}
-%%\usepackage[utf8]{inputenc}
-\usepackage{inputenc}
+\usepackage[utf8]{inputenc}
+%\usepackage{inputenc}
 \usepackage{lmodern}
 \usepackage[T1]{fontenc}
 \usepackage[ngerman]{babel}
+%%\usepackage{selinput}
+%%\SelectInputMappings{germandbls={ß}}
 \usepackage{amssymb,amsmath}
 \usepackage{graphicx}
 \usepackage[version=3]{mhchem}
