--- a/books.bib
+++ b/books.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.5.
+% This file was created with JabRef 2.7.2.
 % Encoding: UTF-8
 
 @MISC{Bogner2009,
@@ -38,6 +38,16 @@
   author = {Roland Clift and John Grace and Martin E. Weber},
   owner = {philipp},
   timestamp = {2013.04.18}
+}
+
+@BOOK{Goldhorn2010,
+  title = {Moderne mathematische Methoden der Physik  Band 2: Operator- und
+	Spektraltheorie -- Gruppen und Darstellungen},
+  publisher = {Springer Heidelberg},
+  year = {2010},
+  author = {Karl-Heinz Goldhorn and Hans-Peter Heinz and Margarita Kraus},
+  owner = {prusch},
+  timestamp = {2017.07.11}
 }
 
 @BOOK{Guo2013,
@@ -83,6 +93,15 @@
   timestamp = {2012.09.21}
 }
 
+@BOOK{Koecher1997,
+  title = {Lineare Algebra und analytische Geometrie},
+  publisher = {Springer-Verlag Berlin Heidelberg GmbH},
+  year = {1997},
+  author = {Max Koecher},
+  owner = {prusch},
+  timestamp = {2017.07.11}
+}
+
 @BOOK{Meyers2011,
   title = {Effektiv C++ programmieren -- 55 M{\"o}glichkeiten, Ihre Programme
 	und Entw{\"u}rfe zu verbessern},
@@ -115,6 +134,17 @@
   file = {:LatticeBoltzmann/multiphase/Diss_Pohl_2008.pdf:PDF},
   owner = {philipp},
   timestamp = {2012.09.05}
+}
+
+@BOOK{Scheck2007,
+  title = {Theoretische Physik 1 -- Von den Newtonschen Gesetzen zum deterministischen
+	Chaos},
+  publisher = {Springer-Verlag Berlin Heidelberg},
+  year = {2007},
+  author = {Florian Scheck},
+  edition = {8. Auflage},
+  owner = {prusch},
+  timestamp = {2017.07.11}
 }
 
 @BOOK{Succi2001,
@@ -159,11 +189,11 @@
   timestamp = {2013.01.25}
 }
 
-@comment{jabref-meta: selector_publisher:}
-
-@comment{jabref-meta: selector_author:}
+@comment{jabref-meta: selector_keywords:}
 
 @comment{jabref-meta: selector_journal:}
 
-@comment{jabref-meta: selector_keywords:}
+@comment{jabref-meta: selector_publisher:}
+
+@comment{jabref-meta: selector_author:}
 
